Convert Map.of() and var declarations to Java 8 compatible alternatives
Co-Authored-By: 于泽棋 <finyu@webank.com>